--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <h2> muito trabalho</h2>
 </div class="parte01">
    <img id="i1" src="time.png">
-   <h3><p class="melhor"> Athletico:</h3><ul></p class="melhor">
+   <h3><p class="melhor"> Athletico Furacão:</h3><ul></p class="melhor">
     <li>Mider</li>
     <li>Jean</li>
     <li> Gabi</li>
