--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div class="parte01">
    <img id="i1" src="time.png">
    <h3><p class="melhor"> Athletico Furacão:</h3><ul></p class="melhor">
-    <li>Mider</li>
+    <li>Mider - mider</li>
     <li>Jean</li>
     <li> Gabi</li>
    </ul>
@@ -27,4 +27,5 @@
 </div class="parte02">
 </body>
 </html>
+
 
